Added a base C++ project using CMake

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,14 @@
 image:
   - Visual Studio 2019
 
+configuration:
+  - Debug
+  - Release
+
+platform:
+  - x64
+
+build:
+  verbosity: normal
+
 clone_folder: c:\projects\clone
